--- a/freeLancer.html
+++ b/freeLancer.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Freelancer Forum</h1>
-    <p>The average starting price is <span id="averageCost">$30</span></p>
+    <p>The average starting price is <span id="averageCost"></span></p>
     <h2>Available Freelancers</h2>
     <table>
       <thead>
